client/src/components/DataFiles/DataFilesSearchbar/DataFilesSearchbar.module.css
.container {
    display: flex;
    flex-direction: row;
    align-items: center;
}

/* Children */

/* Each direct child except the last */
.container > *:not(:last-child) {
    margin-right: 24px; /* 20px design * 1.2 design-to-app ratio */
}
.query-fieldset {
    width: 560px; /* 70px + 396px design * 1.2 design-to-app ratio */
}
/* FP-563: Support count in status message */
.summary-fieldset {
    /* No styles necessary, but defining class for consistency */
}
.filter-fieldset {
    margin-left: auto; /* this is how to "justify-self" on flex children */
}
.clear-button {
    composes: c-button--as-link from '../../../styles/components/c-button.css';

    /* RFC: This style might be best provided from an external yet-to-be-created class for table-top nav links */
    font-weight: bold;
}


/* Children (of `-fieldset`) */

.input {
    composes: form-control from '../../../styles/components/bootstrap.form.css';
}
.output {
    /* … */
}

/* FP-546: When FP-546 uses `_common/Button`, these styles will not exist here */
.submit-button {
    composes: c-button--secondary from '../../../styles/components/c-button.css';
}
.button__icon {
    composes: c-button__icon--before from '../../../styles/components/c-button.css';
}
.button__text {
    /* … */
}

/* Hacks */

.container,
.submit-button,
.clear-button,
.input {
    /* RFE: This style should be inherited from cascade of global styles */
    font-size: 0.75rem; /* 12px (16px design * 1.2 design-to-app ratio) */
}

